--- a/Klyent Klijent/Klyent Klijent.csproj
+++ b/Klyent Klijent/Klyent Klijent.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Networking\ClientSocket.cs" />
     <Compile Include="Networking\Packages\DisconnectPackage.cs" />
     <Compile Include="Networking\Packages\FileDirPackage.cs" />
+    <Compile Include="Networking\Packages\PathPackage.cs" />
     <Compile Include="Networking\Packages\ScreenshotPackage.cs" />
     <Compile Include="Networking\Packages\ShellCommandPackage.cs" />
     <Compile Include="Networking\Packages\ShellOutputPackage.cs" />
